force-app/main/default/objects/FileExplorerFolderTemplate__c/FileExplorerFolderTemplate__c.object-meta.xml
<CustomObject>
    <description>Define a template for a File Explorer Folder structure to aid in storing a hierarchical structure of content documents.</description>
    <label>File Explorer Folder Template</label>
    <nameField>
        <displayFormat>FEFT-{0000000}</displayFormat>
        <label>File Explorer Folder Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Explorer Folder Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>