force-app/main/default/objects/FileExplorerFolderTemplate__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Used to identify a template</description>
    <externalId>true</externalId>
    <inlineHelpText>Used to identify a template</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>